--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,9 @@
 title: Stream Overlay
 theme: jekyll-theme-cayman
+github:
+  repository_url: https://github.com/mangaultime/stream-overlay
+  zip_url: https://github.com/mangaultime/stream-overlay/zipball/master
+  tar_url: https://github.com/mangaultime/stream-overlay/tarball/master
 
 
 
